--- a/template.css
+++ b/template.css
@@ -1,4 +1,9 @@
-
+*
+{
+    
+    border-style: solid;
+    border-width: 5px;
+}
 h1
 {
 	color: blue;
@@ -12,4 +17,12 @@ h1
     height:0;
     padding-bottom:78%;
     position:relative;
+}
+
+.dayNow
+{
+    text-align:center;
+    position:relative;
+    left: 50%;
+    
 }
